# git-mirrorbot

./: .gitignore  Cargo.toml  LICENSE  README.md  config.yml  git-mirror.toml
.github/workflows/: release.yml
.trunk/: trunk.yaml
debian/: git-mirrorbot.service  git-mirrorbot.yml  postinst  prerm
src/: config.rs  main.rs
src/repo/: github.rs  github_helper.rs  mod.rs  progress.rs
