[package]
name = "git-mirrorbot"
edition = "2021"
version = "0.0.1"
license = "MIT"
authors = ["XiaoGuang Zeng"]
description = "A tool to mirror git repositories"

[dependencies]
git2 = "0.20.1"
env_logger = "0.11.8"
log = "0.4.0"
serde = "1.0"
serde_derive = "1.0"
serde_yml = "0.0.12"
anyhow = "1.0.98"
indicatif = "0.17.0"
reqwest = { version = "0.12.15", features = ["blocking", "json"] }
clap = { version = "4.5.37", features = ["derive"] }
regex = "1.11.1"
lazy_static = "1.5.0"

[package.metadata.deb]
revision = "1"
maintainer = "xgzeng@gmail.com"
maintainer-scripts = "debian/"
section = "utils"
priority = "optional"
assets = [
    ["debian/git-mirrorbot.yml", "etc/", "644"],
    ["target/release/git-mirrorbot", "usr/bin/", "755"],
]
conf-files = ["/etc/git-mirrorbot.yml"]
systemd-units = { enable = false }
