[package]
name = "git-mirrorbot"
edition = "2021"
version = "0.0.1"
license = "MIT"
authors = ["XiaoGuang Zeng"]
description = "A tool to mirror git repositories"

[dependencies]
git2 = "0.20"
env_logger = "0.11"
log = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
yaml_serde = "0.10"
anyhow = "1.0"
octocrab = "0.50"
tokio = { version = "1", features = ["rt"] }
clap = { version = "4.5.37", features = ["derive"] }
regex = "1.11.1"
lazy_static = "1.5.0"

[package.metadata.deb]
revision = "1"
maintainer = "xgzeng@gmail.com"
maintainer-scripts = "debian/"
section = "utils"
priority = "optional"
assets = [
    [
        "debian/git-mirrorbot.yml",
        "etc/",
        "644",
    ],
    [
        "target/release/git-mirrorbot",
        "usr/bin/",
        "755",
    ],
]
conf-files = ["/etc/git-mirrorbot.yml"]
systemd-units = { enable = false }
